<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_login"
        tools:context="edu.gatech.cc.eatsafe.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eatsafe"
            android:layout_centerHorizontal="true"
            android:id="@+id/title"
            android:textSize="36sp" android:fontFamily="sans-serif-smallcaps"/>
    <ImageView
            android:layout_width="250px"
            app:srcCompat="@drawable/eatsafe"
            android:id="@+id/logo"
            android:layout_below="@+id/title" android:layout_centerHorizontal="true"
            android:layout_height="250px"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logo"
            android:singleLine="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email"
            android:layout_marginBottom="24dp" android:singleLine="true"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in"
            android:layout_below="@+id/password" android:layout_centerHorizontal="true"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:layout_centerHorizontal="true" android:layout_above="@+id/forgot_password"/>
    <Button
            android:text="Forgot Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password" android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
    />
</RelativeLayout>
